# ArchPDF

./: .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: README.md  verify-windows.ps1
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/PageThumbnails/: PageThumbnails.tsx
src/components/PdfViewer/: PdfViewer.tsx
src/components/StatusBar/: StatusBar.tsx
src/components/Toolbar/: Toolbar.tsx
src/features/annotations/: annotations.ts
src/features/page-operations/: pageOperations.ts
src/features/pdf-open/: openPdfFile.ts
src/lib/pdfjs/: index.ts
src/lib/pdflib/: index.ts
src/types/: pdf.ts
