[package]
name = "archpdf"
version = "0.1.0"
description = "建築・設計業務向けの軽量PDF編集デスクトップアプリ"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["dialog-open", "dialog-save", "fs-read-file"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
